test/fixtures/typecheck/pass/T2.kite
module T2

import T1 {Maybe, Just, Nothing}

rightJoin : Maybe a -> Maybe a -> Maybe a {
  match {
    _, Just x -> Just x,
    y, Nothing -> y
  }
}
