test/fixtures/typecheck/fail/DuplicatePatternVariable.kite
module DuplicatePatternVariable

foo : Int -> Int -> Int {
  match {
    x, x -> x
  }
}
